external-crates/move/crates/move-compiler/tests/move_check/parser/recovery_parse_module_end_module_error.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/recovery_parse_module_end_module_error.move:5:1
  │
5 │ }
  │ ^
  │ │
  │ Unexpected '}'
  │ Expected an identifier

error[E04007]: incompatible types
  ┌─ tests/move_check/parser/recovery_parse_module_end_module_error.move:8:36
  │    
8 │         public fun wrong_return(): u64 {
  │                                    --- Expected: 'u64'
  │ ╭──────────────────────────────────────^
  │ │ ╭────────────────────────────────────'
9 │ │ │     }
  │ ╰─│─────^ Invalid return expression
  │   ╰─────' Given: '()'
